Closed
Bug 1767916
Opened 4 years ago
Closed 4 years ago
[wayland] Firefox aborts on fedora 36 when resizing to second display with scale factor 2: "Buffer size (1568x1501) must be an integer multiple of the buffer_scale (2)"
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
102 Branch
People
(Reporter: jhorak, Assigned: jhorak)
References
(Blocks 1 open bug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
- have at least two monitor setup, first monitor with scale factor 1, second with scale factor 2. open firefox window on first monitor
- resize or move window to the second monitor.
- crash occurs with following message:
[1720618.985] wl_display@1.error(wl_surface@48, 2, "Buffer size (1568x1501) must be an integer multiple of the buffer_scale (2)")
It's race condition crash and seems to be caused by the Renderer thread. It sets the wl_surface buffer_scale to 2 in moz_container_wayland_set_scale_factor_locked but the attached buffer has not yet been resized to double size - which happens on the main thread.
Crash occurs on Fedora 36.
| Assignee | ||
Updated•4 years ago
|
Assignee: nobody → jhorak
| Assignee | ||
Comment 1•4 years ago
|
||
The wl_buffer can be still not resized to double size when the Renderer thread changes
the wl_surface buffer scale to 2 which leads to crash.
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/71a84ed06b13
Clear the attached wl_buffer from wl_surface before scale factor change;r=stransky
Comment 3•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox102:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
Comment 5•4 years ago
|
||
Comment on attachment 9275131 [details]
Bug 1767916 Clear the attached wl_buffer from wl_surface before scale factor change;r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: Crashes on Wayland when laptop is restored from sleep or multi-monitor system is used.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple patch, removes attached buffer from wl_surface when we change scale which leads to screen clear.
- String changes made/needed: none
- Is Android affected?: No
Attachment #9275131 -
Flags: approval-mozilla-beta?
Comment 6•4 years ago
|
||
Comment on attachment 9275131 [details]
Bug 1767916 Clear the attached wl_buffer from wl_surface before scale factor change;r=stransky
Approved for 101.0b6.
Attachment #9275131 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•4 years ago
|
||
| bugherder uplift | ||
status-firefox101:
--- → fixed
Updated•3 years ago
|
Blocks: wayland
Crash Signature: [@ mozilla::GetEffectiveContentSandboxLevel]
[@ libxul.so@0x1eefe32 | wl_log]
[@ wl_log ]
status-firefox100:
--- → affected
Keywords: crash
OS: Unspecified → Linux
Hardware: Unspecified → Desktop
Summary: [wayland] Firefox aborts on fedora 36 when resizing to second display with scale factor 2 → [wayland] Firefox aborts on fedora 36 when resizing to second display with scale factor 2: "Buffer size (1568x1501) must be an integer multiple of the buffer_scale (2)"
Updated•3 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•