Bug 1767916 Clear the attached wl_buffer from wl_surface before scale factor change; r=stransky, a=RyanVM

The wl_buffer can be still not resized to double size when the Renderer thread changes
the wl_surface buffer scale to 2 which leads to crash.

Differential Revision: https://phabricator.services.mozilla.com/D145541